--- a/Introduction.html
+++ b/Introduction.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Introdution about this series</h1>
+    <h1>Introduction about this series</h1>
 </body>
 </html>
