--- a/NooWeb.html
+++ b/NooWeb.html
@@ -306,7 +306,7 @@
     <div class="movieCategory">
         <div class="categoryTitle">Phim Mỹ Thời Đại</div>
         <div class="movieContainer" id="usMovies"></div>
-        <!-- Thêm nút lướt cho mục phim Việt Nam -->
+        <!-- Thêm nút lướt cho mục phim Mỹ -->
         <button class="PageButton" onclick="prevPage('usMovies')"><<</button>
         <button class="PageButton" onclick="nextPage('usMovies')">>></button>
     </div>
