--- a/NooWeb.html
+++ b/NooWeb.html
@@ -298,7 +298,7 @@
     <div class="movieCategory">
         <div class="categoryTitle">Phim Trung Quốc Hot</div>
         <div class="movieContainer" id="chinaMovies"></div>
-        <!-- Thêm nút lướt cho mục phim Việt Nam -->
+        <!-- Thêm nút lướt cho mục phim Trung Quốc -->
         <button class="PageButton" onclick="prevPage('chinaMovies')"><<</button>
         <button class="PageButton" onclick="nextPage('chinaMovies')">>></button>
     </div>
@@ -306,7 +306,7 @@
     <div class="movieCategory">
         <div class="categoryTitle">Phim Mỹ Thời Đại</div>
         <div class="movieContainer" id="usMovies"></div>
-        <!-- Thêm nút lướt cho mục phim Việt Nam -->
+        <!-- Thêm nút lướt cho mục phim Mỹ -->
         <button class="PageButton" onclick="prevPage('usMovies')"><<</button>
         <button class="PageButton" onclick="nextPage('usMovies')">>></button>
     </div>
